2012-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-compat.el: Redefine `delete-directory' to provide recursive
	deletion unless already defined.

	* gnus.el (gnus-compat): Require it.

	* gnus-compat.el: New file.

	* gnus-start.el (gnus-clean-old-newsrc): New function.
	(gnus-read-newsrc-file): Use it.

	* mm-archive.el (mm-dissect-archive): Use it to get all file names.
	Use recursive deletion.
	(mm-dissect-archive): Add support for zip files.

	* gnus-util.el (gnus-recursive-directory-files): New function.

	* mm-archive.el (mm-archive-list-files): Inline text and image parts.
	(mm-archive-decoders): Add tgz support.

	* mm-decode.el (mm-shr): Make sure that the HTML ends with a newline.
	Otherwise inserting text into the Gnus buffer can look odd.

	* gnus-art.el (gnus-mime-inline-part): Slight clean-up.

	* mm-archive.el (mm-archive-decoders): Add support for tar.

	* gnus.el (gnus-logo-color-alist): Change the colours for Ma Gnus.

	* nnmail.el (nnmail-extra-headers): Add Cc to the default.

2012-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-dissect-singlepart): Check that the decoder exists.

	* mm-archive.el: New file.

	* mm-decode.el (mm-dissect-singlepart): Use it to decode ms-tnef files.

	* mm-util.el (mm-find-buffer-file-coding-system): Comment fix.

	* message.el (message-goto-*): Make all the `message-goto-*' commands
	push the mark before moving point.  This makes it easier to go back to
	where you came from after editing whatever you jumped to.

2012-01-31  Lars Magne Ingebrigtsen  <lars@ingebrigtsen.no>

	* gnus.el: Ma Gnus v0.1 is released.

2012-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-retrieve-group-data-early): Keep track of how many
	groups we do a total scan for.
	(nnimap-wait-for-response): Say that we're doing a total scan, if we're
	doing that.

2012-01-31  Jim Meyering  <jim@meyering.net>

	* gnus-agent.el (gnus-agent-expire-unagentized-dirs):